# libxmf2svg

./: CMakeLists.txt  README.md  build-linux.sh  build-macos.sh  build-windows.bat  vcpkg.json
inc/: emf2svg_private.h  pmf2svg.h  wmf2svg.h  wmf2svg_private.h
src/lib/: emf2svg.c  emf2svg_rec_control.c  pmf2svg.c  wmf2svg.c
